--- a/crm-project/pom.xml
+++ b/crm-project/pom.xml
@@ -234,6 +234,29 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.7.5</version>
             </plugin>
+                 
+                 <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>calendar.SpringApp</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>final</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+                 
         </plugins>
     </build>
 
